--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,10 @@ openai==1.3.0
 google-generativeai==0.3.2
 anthropic==0.18.1
 requests==2.31.0
+beautifulsoup4==4.12.2
 google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.1
+reportlab==4.0.7
+xhtml2pdf==0.2.11
 
